# ibkr-porez-py

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  activate.sh  data.json  index.html  pyproject.toml  pytest.ini  search.json  tasks.py
.github/workflows/: briefcase.yml  ci.yml  docs.yml  pip_publish.yml
builds/tests/: index.html
builds/tests/138/: index.html
builds/tests/138/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/138/export/: influxDbData.txt  prometheusData.txt
builds/tests/138/history/: history-trend.json  history.json  retry-trend.json
builds/tests/138/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  severity.json  summary.json
builds/tests/139/: index.html
builds/tests/139/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/139/export/: influxDbData.txt  prometheusData.txt
builds/tests/139/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
builds/tests/139/widgets/: duration.json  executors.json  history-trend.json  severity.json  summary.json
builds/tests/140/: index.html
builds/tests/140/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/140/export/: influxDbData.txt  prometheusData.txt
builds/tests/140/history/: duration-trend.json  history-trend.json  history.json
builds/tests/140/widgets/: categories-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
builds/tests/141/: index.html
builds/tests/141/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/141/export/: influxDbData.txt  prometheusData.txt
builds/tests/141/history/: categories-trend.json  duration-trend.json  history.json
builds/tests/141/widgets/: executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
builds/tests/142/: index.html
builds/tests/142/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/142/export/: influxDbData.txt  prometheusData.txt
builds/tests/142/history/: history-trend.json  history.json  retry-trend.json
builds/tests/142/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  summary.json
builds/tests/143/: index.html
builds/tests/143/data/: behaviors.csv  behaviors.json  (+4 more)
builds/tests/144/: index.html
builds/tests/145/: index.html
builds/tests/146/: index.html
builds/tests/147/: index.html
builds/tests/148/: index.html
builds/tests/149/: index.html
builds/tests/150/: index.html
builds/tests/151/: index.html
builds/tests/152/: index.html
builds/tests/153/: index.html
builds/tests/154/: index.html
builds/tests/155/: index.html
builds/tests/156/: index.html
builds/tests/157/: index.html
builds/tests/158/: index.html
builds/tests/last-history/: history.json
docs/: mkdocs.yml
docs/src/en/: index.md  installation.md
docs/src/rs/: index.md  installation.md
docs/src/rs-cyr/: index.md  installation.md
docs/src/ru/: index.md  installation.md
docs/src/uk/: index.md  installation.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_554927f107f7791a___about___py.html  z_554927f107f7791a___main___py.html  z_554927f107f7791a_config_py.html  z_554927f107f7791a_declaration_gains_xml_py.html  z_554927f107f7791a_declaration_income_xml_py.html  z_554927f107f7791a_declaration_manager_py.html  z_554927f107f7791a_error_handling_py.html  z_554927f107f7791a_ibkr_csv_py.html  z_554927f107f7791a_ibkr_flex_query_py.html  z_554927f107f7791a_logging_config_py.html  z_554927f107f7791a_main_py.html  z_554927f107f7791a_models_py.html  z_554927f107f7791a_nbs_py.html  z_554927f107f7791a_operation_config_py.html  z_554927f107f7791a_operation_get_py.html  z_554927f107f7791a_operation_import_py.html  z_554927f107f7791a_operation_list_py.html  z_554927f107f7791a_operation_report_params_py.html  z_554927f107f7791a_operation_report_py.html  z_554927f107f7791a_operation_report_tables_py.html  z_554927f107f7791a_operation_show_declaration_py.html  z_554927f107f7791a_operation_stat_py.html  z_554927f107f7791a_operation_sync_py.html  z_554927f107f7791a_report_base_py.html  z_554927f107f7791a_report_gains_py.html  z_554927f107f7791a_report_income_py.html  z_554927f107f7791a_storage_flex_queries_py.html  z_554927f107f7791a_storage_py.html  z_554927f107f7791a_tax_py.html  z_554927f107f7791a_validation_py.html  z_69bae73b6f1c91fd_app_icon_py.html  z_69bae73b6f1c91fd_assessment_dialog_py.html  z_69bae73b6f1c91fd_config_dialog_py.html  z_69bae73b6f1c91fd_constants_py.html  z_69bae73b6f1c91fd_declaration_details_dialog_py.html  z_69bae73b6f1c91fd_export_worker_py.html  (+7 more)
ibkr/: index.html
icon/: ibkr_porez.icns
installation/: index.html
reference/: index.html
rs/: 404.html  index.html  search.json
rs-cyr/: 404.html  index.html  search.json  sitemap.xml
rs-cyr/ibkr/: index.html
rs-cyr/installation/: index.html
rs-cyr/reference/: index.html
rs-cyr/search/: search_index.json
rs-cyr/usage/: index.html
rs/ibkr/: index.html
rs/installation/: index.html
rs/reference/: index.html
rs/search/: search_index.json
rs/usage/: index.html
ru/: 404.html  index.html  objects.inv  search.json
ru/ibkr/: index.html
ru/installation/: index.html
ru/reference/: index.html
ru/search/: search_index.json
ru/usage/: index.html
scripts/: generate_icons.py  smoke_test_gui.py  verup.sh
search/: search_index.json
src/ibkr_porez/: __main__.py
src/ibkr_porez/gui/: app_icon.py  import_dialog.py
tests/: test_gui_regressions.py
tests/resources/regressions/: gui_main_window_active.yml
uk/: 404.html  index.html  objects.inv  search.json  sitemap.xml
uk/ibkr/: index.html
uk/installation/: index.html
uk/reference/: index.html
uk/search/: search_index.json
uk/usage/: index.html
usage/: index.html
(+7071 files in other folders)
