[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "ibkr-porez"
dynamic = [ "version",]
description = "Automated PPDG-3R tax reports for Interactive Brokers. It automatically pulls your data and generates a ready-to-upload XML file with all prices converted to RSD."
keywords = [ "one", "two", ]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.0",
    "rich-click>=1.8.8",
    "requests>=2.32.3",
    "holidays>=0.63",
    "python-dateutil>=2.8.2",
    "pydantic>=2.10.6",
    "platformdirs>=4.3.6",
    "tenacity>=9.0.0",
    "pandas>=2.0.0",
    "PySide6>=6.7.0,<6.8.0",
    "holidays>=0.89",
]
[[project.authors]]
name = "Andrey Sorokin"
email = "andrey@sorokin.engineer"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://andgineer.github.io/ibkr-porez/"
Documentation = "https://andgineer.github.io/ibkr-porez/"

[tool.setuptools]
packages = "find:"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.manifest]
include = [ "README.md", "LICENSE.txt",]

[tool.ruff]
line-length = 99

[tool.hatch.version]
path = "src/ibkr_porez/__about__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ibkr_porez",
]

[tool.uv]
dev-dependencies = [
    "allure-pytest>=2.14.2",
    "briefcase>=0.3.26",
    "chardet<=6",
    "invoke>=2.2.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.13",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pymdown-extensions>=10.15",
    "pyrefly>=0.50.0",
    "pytest-cov>=6.1.1",
    "pytest-qt>=4.4.0",
    "pytest-regressions>=2.8.3",
    "pytest>=8.3.5",
]

[project.scripts]
ibkr-porez = "ibkr_porez.main:ibkr_porez"

[tool.briefcase]
project_name = "IBKR Porez"
bundle = "engineer.sorokin"
# version: hardcoded here because Briefcase does not understand [tool.hatch.version] / dynamic.
# Must be kept in sync with src/ibkr_porez/__about__.py — update in ver scripts (verup.sh / tasks.py).
version = "3.8.0"
url = "https://andgineer.github.io/ibkr-porez/"
license.file = "LICENSE.txt"
author = "Andrey Sorokin"
author_email = "andrey@sorokin.engineer"

[tool.briefcase.app.ibkr-porez]
formal_name = "IBKR Porez"
description = "Automated PPDG-3R tax reports for Interactive Brokers"
sources = ["src/ibkr_porez"]
icon = "icon/ibkr_porez"
requires = [
    # ⚠️  KEEP THIS LIST IN SYNC WITH [project].dependencies in pyproject.toml.
    # PySide6 is capped at <6.8.0 because Briefcase's macOS support package targets macOS 11.0
    # and PySide6 6.8+ only ships macosx_13_0_arm64 wheels — pip inside the Briefcase app env
    # cannot find them. Both lists use the same cap so dev and installer ship identical versions.
    "click>=8.2.0",
    "rich-click>=1.8.8",
    "requests>=2.32.3",
    "holidays>=0.63",
    "python-dateutil>=2.8.2",
    "pydantic>=2.10.6",
    "platformdirs>=4.3.6",
    "tenacity>=9.0.0",
    "pandas>=2.0.0",
    "PySide6>=6.7.0,<6.8.0",
]

[tool.briefcase.app.ibkr-porez.macOS]
# Unsigned by default; add signing config when Apple cert is available

[tool.briefcase.app.ibkr-porez.windows]
# Windows: produces MSI via WiX (auto-installed by Briefcase)

[tool.briefcase.app.ibkr-porez.linux]
format = "appimage"
