[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "ibkr-porez"
dynamic = [ "version",]
description = "Automated PPDG-3R tax reports for Interactive Brokers. It automatically pulls your data and generates a ready-to-upload XML file with all prices converted to RSD."
keywords = [ "one", "two", ]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.0",
    "rich-click>=1.8.8",
    "requests>=2.32.3",
    "holidays>=0.63",
    "python-dateutil>=2.8.2",
    "pydantic>=2.10.6",
    "platformdirs>=4.3.6",
    "tenacity>=9.0.0",
    "pandas>=2.0.0",
    "PySide6>=6.7.0,<6.8.0",
]
[[project.authors]]
name = "Andrey Sorokin"
email = "andrey@sorokin.engineer"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://andgineer.github.io/ibkr-porez/"
Documentation = "https://andgineer.github.io/ibkr-porez/"

[tool.setuptools]
packages = "find:"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.manifest]
include = [ "README.md", "LICENSE.txt",]

[tool.ruff]
line-length = 99

[tool.hatch.version]
path = "src/ibkr_porez/__about__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ibkr_porez",
]

[tool.uv]
dev-dependencies = [
    "allure-pytest>=2.14.2",
    "invoke>=2.2.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.13",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pymdown-extensions>=10.15",
    "pyrefly>=0.50.0",
    "pytest-cov>=6.1.1",
    "pytest-qt>=4.4.0",
    "pytest-regressions>=2.8.3",
    "pytest>=8.3.5",
]

[project.scripts]
ibkr-porez = "ibkr_porez.main:ibkr_porez"

[tool.briefcase]
project_name = "IBKR Porez"
bundle = "engineer.sorokin"
# version: hardcoded here because Briefcase does not understand [tool.hatch.version] / dynamic.
# Must be kept in sync with src/ibkr_porez/__about__.py — update in ver scripts (verup.sh / tasks.py).
version = "3.12.4"
url = "https://andgineer.github.io/ibkr-porez/"
license.file = "LICENSE.txt"
author = "Andrey Sorokin"
author_email = "andrey@sorokin.engineer"

[tool.briefcase.app.ibkr-porez]
formal_name = "IBKR Porez"
description = "Automated PPDG-3R tax reports for Interactive Brokers"
sources = ["src/ibkr_porez"]
icon = "icon/ibkr_porez"
requires = [
    # ⚠️  KEEP THIS LIST IN SYNC WITH [project].dependencies in pyproject.toml.
    # PySide6 is capped at <6.8.0 because Briefcase's macOS support package targets macOS 11.0
    # and PySide6 6.8+ only ships macosx_13_0_arm64 wheels — pip inside the Briefcase app env
    # cannot find them. Both lists use the same cap so dev and installer ship identical versions.
    "click>=8.2.0",
    "rich-click>=1.8.8",
    "requests>=2.32.3",
    "holidays>=0.63",
    "python-dateutil>=2.8.2",
    "pydantic>=2.10.6",
    "platformdirs>=4.3.6",
    "tenacity>=9.0.0",
    "pandas>=2.0.0",
    "PySide6>=6.7.0,<6.8.0",
]
cleanup_paths = [
    # ── Qt development tools ──────────────────────────────────────────────────
    "**/app_packages/PySide6/Assistant.app",
    "**/app_packages/PySide6/Designer.app",
    "**/app_packages/PySide6/Linguist.app",
    "**/app_packages/PySide6/lrelease*",
    "**/app_packages/PySide6/lupdate*",
    "**/app_packages/PySide6/balsam*",
    "**/app_packages/PySide6/balsamui*",
    "**/app_packages/PySide6/qmlformat*",
    "**/app_packages/PySide6/qmllint*",
    "**/app_packages/PySide6/include",
    # ── Type stubs — IDE support only, not needed at runtime ──────────────────
    "**/app_packages/PySide6/*.pyi",
    # ── Android deploy scripts ────────────────────────────────────────────────
    "**/app_packages/PySide6/scripts",
    # ── QML runtime — app uses QtWidgets only ─────────────────────────────────
    "**/app_packages/PySide6/Qt/qml",
    "**/app_packages/PySide6/Qt/plugins/qmltooling",
    # ── Translations ──────────────────────────────────────────────────────────
    "**/app_packages/PySide6/Qt/translations",
    # ── Static libraries ──────────────────────────────────────────────────────
    "**/app_packages/**/*.a",
    # ── FFmpeg — bundled for QtMultimedia, not used by this app (~36 MB) ──────
    "**/app_packages/PySide6/Qt/lib/libav*.dylib",
    "**/app_packages/PySide6/Qt/lib/libsw*.dylib",
    # ── Unused Qt plugin directories ──────────────────────────────────────────
    "**/app_packages/PySide6/Qt/plugins/assetimporters",
    "**/app_packages/PySide6/Qt/plugins/sceneparsers",
    "**/app_packages/PySide6/Qt/plugins/sqldrivers",
    "**/app_packages/PySide6/Qt/plugins/multimedia",
    "**/app_packages/PySide6/Qt/plugins/geoservices",
    "**/app_packages/PySide6/Qt/plugins/renderers",
    # ── Unused Qt frameworks + Python bindings ────────────────────────────────
    # QtWebEngine (Chromium) ~480 MB
    "**/app_packages/PySide6/Qt/lib/QtWebEngine*.framework",
    "**/app_packages/PySide6/QtWebEngine*.abi3.so",
    # QtPdf
    "**/app_packages/PySide6/Qt/lib/QtPdf*.framework",
    "**/app_packages/PySide6/QtPdf*.abi3.so",
    # Qt Quick / QML
    "**/app_packages/PySide6/Qt/lib/QtQuick*.framework",
    "**/app_packages/PySide6/QtQuick*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtQml*.framework",
    "**/app_packages/PySide6/QtQml*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtShaderTools.framework",
    "**/app_packages/PySide6/QtShaderTools*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/Qt5Compat*.framework",
    "**/app_packages/PySide6/Qt5Compat*.abi3.so",
    # Qt3D
    "**/app_packages/PySide6/Qt/lib/Qt3D*.framework",
    "**/app_packages/PySide6/Qt3D*.abi3.so",
    # QtDesigner / UiTools
    "**/app_packages/PySide6/Qt/lib/QtDesigner*.framework",
    "**/app_packages/PySide6/QtDesigner*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtUiTools.framework",
    "**/app_packages/PySide6/QtUiTools*.abi3.so",
    # QtCharts / Graphs / DataVisualization
    "**/app_packages/PySide6/Qt/lib/QtCharts*.framework",
    "**/app_packages/PySide6/QtCharts*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtGraphs*.framework",
    "**/app_packages/PySide6/QtGraphs*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtDataVisualization*.framework",
    "**/app_packages/PySide6/QtDataVisualization*.abi3.so",
    # QtMultimedia / SpatialAudio
    "**/app_packages/PySide6/Qt/lib/QtMultimedia*.framework",
    "**/app_packages/PySide6/QtMultimedia*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtSpatialAudio.framework",
    "**/app_packages/PySide6/QtSpatialAudio*.abi3.so",
    # Connectivity / Location
    "**/app_packages/PySide6/Qt/lib/QtBluetooth.framework",
    "**/app_packages/PySide6/QtBluetooth*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtNfc.framework",
    "**/app_packages/PySide6/QtNfc*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtSensors*.framework",
    "**/app_packages/PySide6/QtSensors*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtPositioning*.framework",
    "**/app_packages/PySide6/QtPositioning*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtLocation.framework",
    "**/app_packages/PySide6/QtLocation*.abi3.so",
    # Network extras (app uses Python requests, not Qt networking)
    "**/app_packages/PySide6/Qt/lib/QtNetwork.framework",
    "**/app_packages/PySide6/QtNetwork*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtNetworkAuth.framework",
    "**/app_packages/PySide6/QtNetworkAuth*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtHttpServer.framework",
    "**/app_packages/PySide6/QtHttpServer*.abi3.so",
    # WebChannel / WebSockets / WebView
    "**/app_packages/PySide6/Qt/lib/QtWebChannel*.framework",
    "**/app_packages/PySide6/QtWebChannel*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtWebSockets.framework",
    "**/app_packages/PySide6/QtWebSockets*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtWebView.framework",
    "**/app_packages/PySide6/QtWebView*.abi3.so",
    # Serial / Bus
    "**/app_packages/PySide6/Qt/lib/QtSerialBus*.framework",
    "**/app_packages/PySide6/QtSerialBus*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtSerialPort.framework",
    "**/app_packages/PySide6/QtSerialPort*.abi3.so",
    # Misc unused
    "**/app_packages/PySide6/Qt/lib/QtSql.framework",
    "**/app_packages/PySide6/QtSql*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtHelp.framework",
    "**/app_packages/PySide6/QtHelp*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtRemoteObjects*.framework",
    "**/app_packages/PySide6/QtRemoteObjects*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtScxml*.framework",
    "**/app_packages/PySide6/QtScxml*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtStateMachine*.framework",
    "**/app_packages/PySide6/QtStateMachine*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtTextToSpeech.framework",
    "**/app_packages/PySide6/QtTextToSpeech*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtVirtualKeyboard*.framework",
    "**/app_packages/PySide6/QtVirtualKeyboard*.abi3.so",
    # QtDBus: hard dylib dependency of QtGui.framework on macOS — must keep
    "**/app_packages/PySide6/Qt/lib/QtTest.framework",
    "**/app_packages/PySide6/QtTest*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtConcurrent.framework",
    "**/app_packages/PySide6/QtConcurrent*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtLanguageServer.framework",
    "**/app_packages/PySide6/Qt/lib/QtXml.framework",
    "**/app_packages/PySide6/QtXml*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtSvg*.framework",
    "**/app_packages/PySide6/QtSvg*.abi3.so",
    "**/app_packages/PySide6/QtExampleIcons*.abi3.so",
    "**/app_packages/PySide6/Qt/lib/QtJsonRpc.framework",
]

[tool.briefcase.app.ibkr-porez.macOS]
# Unsigned by default; add signing config when Apple cert is available

[tool.briefcase.app.ibkr-porez.windows]
# Windows: produces MSI via WiX (auto-installed by Briefcase)

[tool.briefcase.app.ibkr-porez.linux]
# AppImage + PySide6 6.7+ is unsupported: Briefcase's Docker base targets glibc <2.28
# but PySide6 6.7+ requires manylinux_2_28. Linux users install via PyPI instead.
